fix #13: login and signup page scrollbar issue fixed

--- a/frontend-ai-chatbot/src/App.css
+++ b/frontend-ai-chatbot/src/App.css
@@ -1,4 +1,3 @@
-main{
-    background-color: #212121;
-    height: 100vh;
+main {
+  background-color: #212121;
 }
